# svelte-check-native

./: .gitignore  .gitmodules  .upstream-pin  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md  SESSION_CONTEXT.md  deny.toml  package.json
crates/analyze/: Cargo.toml
crates/analyze/src/: ast_walk.rs  dom_binding.rs  events.rs  jsdoc.rs  lib.rs  model.rs  props.rs  rune.rs  slot_attr_rewrite.rs  store.rs  template_refs.rs  template_scope.rs  template_walker.rs  void_refs.rs  walker.rs
crates/analyze/src/nodes/: action.rs  animation.rs  attribute.rs  await_pending_catch_block.rs  binding.rs  const_tag.rs  destructure.rs  each_block.rs  element.rs  event_handler.rs  if_else_block.rs  inline_component.rs  let_directive.rs  mod.rs  snippet_block.rs  svelte_element.rs  transition.rs
crates/analyze/src/svelte4/: mod.rs  on_directive.rs
crates/cli/: Cargo.toml
crates/cli/src/: collisions.rs  discovery.rs  kit_files.rs  main.rs  output.rs  svelte_config.rs
crates/cli/tests/: bug_fixtures.rs  emit_snapshots.rs  files_denominator.rs  htmlx_fixtures.rs  kit_file_parity.rs  output_format.rs  state_raw_real_svelte.rs  svelte_config_e2e.rs  upstream_sanity.rs  v5_fixtures.rs  v5_stores_fixtures.rs
crates/cli/tests/bug_fixtures/: run.cjs
crates/cli/tests/emit_snapshots/bugs/01-store-with-dollar-suffix/: expected.emit.ts
crates/cli/tests/emit_snapshots/bugs/07-template-check-wrapper-referenced/: expected.emit.ts
crates/cli/tests/emit_snapshots/bugs/08-action-attrs-referenced/: expected.emit.ts
crates/cli/tests/emit_snapshots/bugs/09-bind-pair-referenced/: expected.emit.ts
crates/cli/tests/emit_snapshots/bugs/100-sveltekit-error-route-autotyping/: expected.emit.ts
crates/cli/tests/emit_snapshots/bugs/169-ignore-nested-style-css/: expected.emit.ts
crates/cli/tests/emit_snapshots/bugs/181-nested-script-rawtext/: expected.emit.ts
crates/cli/tests/emit_snapshots/bugs/183-declaration-tags/: expected.emit.ts
crates/cli/tests/emit_snapshots/bugs/184-module-snippet-component-instance-ref/: expected.emit.ts
crates/cli/tests/emit_snapshots/bugs/185-component-slot-prop-in-snippet/: expected.emit.ts
crates/cli/tests/emit_snapshots/bugs/186-single-line-const-tag-error/: expected.emit.ts
crates/cli/tests/emit_snapshots/bugs/187-each-same-name-binding/: expected.emit.ts
crates/cli/tests/emit_snapshots/bugs/188-export-fn-typeof/: expected.emit.ts
crates/cli/tests/htmlx_fixtures/: baselines.json  observed_counts.json  run.cjs  skip.json
crates/cli/tests/ls_diagnostics/: run.cjs
crates/cli/tests/ls_diagnostics/skips/: $$events-usage.json  $$props-usage.json  $$slots-usage.json  custom-types.json  getters.json
crates/cli/tests/upstream_sanity/: shim.cjs
crates/cli/tests/v5_fixtures/: baselines.json  run.cjs
crates/cli/tests/v5_stores_fixtures/: baselines.json
crates/core/: Cargo.toml
crates/core/src/: diagnostic.rs  lib.rs  position.rs  range.rs  rune_scan.rs  sveltekit.rs  symbol.rs  synth_names.rs
crates/core/src/tsconfig/: flatten.rs  load.rs  mod.rs  parse.rs
crates/emit/: Cargo.toml
crates/emit/src/: default_export.rs  destructure_idents.rs  dispatcher_typing_rewrite.rs  emit_buffer.rs  hoisted_imports.rs  is_ts.rs  kit_inject.rs  knownevents.rs  lib.rs  missing_imports.rs  process_instance_script_content.rs  process_module_script_tag.rs  props_emit.rs  render_function.rs  rewrite_invariants.rs  script_body_rewrites.rs  script_split.rs  script_template_analysis.rs  state_nullish_rewrite.rs  sveltekit.rs  util.rs  void_block.rs
crates/emit/src/htmlxtojsx_utils/: mod.rs  node_utils.rs
crates/emit/src/nodes/: action.rs  animation.rs  attach_tag.rs  attribute.rs  await_pending_catch_block.rs  binding.rs  blocks.rs  class.rs  comment.rs  component.rs  const_tag.rs  debug_tag.rs  directives.rs  each_block.rs  element.rs  event_handler.rs  if_else_block.rs  inline_component.rs  interpolation.rs  key.rs  let_directive.rs  mod.rs  mustache_tag.rs  raw_mustache_tag.rs  render_tag.rs  snippet_block.rs  spread.rs  style_directive.rs  text.rs  transition.rs
crates/emit/src/svelte2tsx_nodes/: component_documentation.rs  component_events.rs  exported_names.rs  exported_type_info.rs  generics.rs  ident_refs.rs  implicit_store_values.rs  mod.rs  type_deps.rs  type_refs.rs
crates/emit/src/svelte2tsx_utils/: error.rs  mod.rs  scope.rs  ts_ast.rs
crates/emit/src/svelte4/: compat.rs  mod.rs  reactive.rs
crates/emit/tests/: source_map_invariants.rs
crates/enhance/: Cargo.toml
crates/enhance/src/: lib.rs  missing_svelte_imports.rs
crates/parser/: Cargo.toml
crates/parser/examples/: dump_parse.rs
crates/parser/src/: ast.rs  attributes.rs  blocks.rs  document.rs  error.rs  html5.rs  lib.rs  mustache.rs  scanner.rs  script.rs  sections.rs  template.rs
crates/parser/tests/: diff_parse_smoke.rs
crates/parser/tests/diff_parse_smoke/: basic.svelte  blocks.svelte  rawtext.svelte
crates/svelte-compiler/: Cargo.toml
crates/svelte-compiler/src/: bridge.mjs  lib.rs
crates/svn-lint/: Cargo.toml
crates/svn-lint/src/: a11y_constants.rs  aria_data.rs  codes.rs  compat.rs  context.rs  html5.rs  ignore.rs  lib.rs  messages.rs  scope.rs  scope_rune_detection.rs  scope_types.rs  scope_util.rs  walk.rs
crates/svn-lint/src/rules/: a11y_rules.rs  binding_rules.rs  block_rules.rs  component_rules.rs  element_rules.rs  implicit_close.rs  mod.rs  script_ast_rules.rs  script_rules.rs  svelte_element_rules.rs  text_rules.rs  util.rs
crates/svn-lint/tests/: a11y_parity.rs  element_implicitly_closed.rs  ignore_parity.rs  options_rules.rs  rule_gate_regressions.rs  state_referenced_locally_if_body.rs  state_referenced_locally_optchain.rs  svelte_ignore_positions.rs  upstream_validator.rs
crates/typecheck/: Cargo.toml
crates/typecheck/src/: cache.rs  discovery.rs  filters.rs  kit_app_ambients.rs  kit_types_mirror.rs  lib.rs  output.rs  overlay.rs  path_utils.rs  position.rs  runner.rs  svelte_shims.d.ts  svelte_shims_core.d.ts  svelte_shims_fallback.d.ts  types.rs
xtask/: Cargo.toml
(+1196 files in other folders)
