[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/parser",
    "crates/analyze",
    "crates/emit",
    "crates/svn-lint",
    "crates/svelte-compiler",
    "crates/typecheck",
    "crates/cli",
    "xtask",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/harshmandan/svelte-check-native"
authors = ["Harsh Mandan <harshsinghmandan@gmail.com>"]
version = "0.7.0"

[workspace.lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
# Escalate common footguns to errors. Style/pedantic left at default.
unwrap_used = "warn"
expect_used = "warn"
dbg_macro = "warn"
todo = "warn"

[workspace.dependencies]
# Shared across crates — pin centrally, inherit per-crate.
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
smol_str = "0.3"
camino = "1"
memchr = "2"
# Order-preserving set/map with O(1) contains. Used by analyze for
# the void-refs registry that emit reads at end-of-render — was a
# linear-scan Vec<SmolStr> ::any-contains check (O(n²) on N synth
# names × M components).
indexmap = "2"
# Compile-time perfect-hash maps for static lookup tables. Used in
# svn-lint for ARIA prop / role tables (48 / 127 entries each)
# called per-element-per-rule on the lint hot path.
phf = { version = "0.13", features = ["macros"] }
# Stack-inline storage for collections that are usually small. Used
# in svn-analyze for TemplateSummary fields (bind:this targets,
# {@const} names, use: directives, component instantiations) — in
# typical components these have 0-2 elements, so the heap alloc was
# wasted on the common case.
smallvec = "1"
# Tolerant JSON for tsconfig.json (comments + trailing commas).
json5 = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Async + process
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "io-util", "sync"] }

# Parallelism
rayon = "1"

# Hashing / caching
blake3 = "1"

# Filesystem walking
walkdir = "2"
globset = "0.4"
# Canonicalize replacement that avoids Windows verbatim/UNC (`\\?\`) prefixes
# whenever a plain path is representable. std::fs::canonicalize on Windows
# always returns the verbatim form, which upstream svelte-check/tsgo don't
# accept and which breaks lexical glob matching against user `include`
# patterns written with forward slashes.
dunce = "1"
# Semver-aware comparison for picking the newest tsgo in a pnpm/bun
# package store. Lexicographic string-sort mis-orders 9 vs 10 anywhere
# in a version segment.
semver = "1"

# JS/TS parser. Architecture rule: embedded JS/TS is parsed once into
# a real AST and walked structurally — never scanned character-by-
# character. oxc is the only parser in the workspace for this reason.
oxc_allocator = "0.54"
oxc_ast = "0.54"
oxc_diagnostics = "0.54"
oxc_parser = "0.54"
oxc_span = "0.54"

# Testing
insta = { version = "1", features = ["yaml", "filters"] }
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"

[profile.dev]
# keep default

[profile.test]
# Slim debug-info to "line-tables-only" so test-binary linking is
# ~2× faster across the workspace. We have ~13 integration test
# binaries; full debuginfo on each was ~3-5s of link time per binary
# (~50s of pure linking on `cargo test --workspace`). Line tables
# alone are enough for backtraces in panics, which is what tests
# actually need.
debug = "line-tables-only"

[profile.bench]
lto = "thin"
