[package]
name = "svn-analyze"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
svn-core = { path = "../core" }
svn-parser = { path = "../parser" }
smol_str.workspace = true
indexmap.workspace = true
smallvec.workspace = true
oxc_allocator.workspace = true
oxc_ast.workspace = true
oxc_span.workspace = true
