[package]
name = "svn-core"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
smol_str.workspace = true
serde.workspace = true
serde_json.workspace = true
json5.workspace = true
camino.workspace = true
thiserror.workspace = true
memchr.workspace = true
dunce.workspace = true

[dev-dependencies]
tempfile.workspace = true
