[package]
name = "svn-emit"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
svn-core = { path = "../core" }
svn-parser = { path = "../parser" }
svn-analyze = { path = "../analyze" }
smol_str.workspace = true

[dev-dependencies]
oxc_allocator.workspace = true
