[package]
name = "svn-emit"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
svn-core = { path = "../core" }
svn-parser = { path = "../parser" }
svn-analyze = { path = "../analyze" }
smol_str.workspace = true
oxc_allocator.workspace = true
oxc_ast.workspace = true
oxc_span.workspace = true
blake3.workspace = true
