[package]
name = "svn-enhance"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
svn-core = { path = "../core" }
svn-parser = { path = "../parser" }
oxc_allocator.workspace = true
oxc_ast.workspace = true
