[package]
name = "svn-enhance"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
svn-core = { path = "../core" }
svn-parser = { path = "../parser" }
oxc_allocator.workspace = true
oxc_ast.workspace = true
# Real TS/node module resolution (tsconfig `paths`, node_modules,
# package.json `exports`) so we resolve `.svelte` specifiers of every
# form the way tsgo would — no hand-rolled resolution. See crate docs.
oxc_resolver = "11"
walkdir.workspace = true
