[package]
name = "svn-svelte-compiler"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
svn-core = { path = "../core" }
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
