[package]
name = "svn-lint"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
svn-core = { path = "../core" }
svn-analyze = { path = "../analyze" }
svn-parser = { path = "../parser" }
smol_str.workspace = true
serde.workspace = true
serde_json.workspace = true
oxc_allocator.workspace = true
oxc_ast.workspace = true
oxc_parser.workspace = true
oxc_span.workspace = true
rayon.workspace = true
memchr.workspace = true
phf.workspace = true

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
