[package]
name = "svn-typecheck"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
svn-core = { path = "../core" }
svn-emit = { path = "../emit" }
anyhow.workspace = true
tokio.workspace = true
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
camino.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
